[package]
name = "traffic_editor_iii"
version = "0.0.1"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libtraffic_editor_iii"

[[bin]]
path = "src/main.rs"
name = "traffic_editor_iii"

[dependencies]
yaml-rust = "0.4"
serde_yaml = "0.8.13"
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-pipelined" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.55", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_gltf2",
  "bevy_pbr2",
  "bevy_render2",
  "bevy_sprite2",
  "bevy_wgpu",
  "bevy_winit",
  "dynamic",
  "render",
  "png",
  "x11",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_gltf2",
  "bevy_pbr2",
  "bevy_render2",
  "bevy_sprite2",
  "bevy_winit",
  "png",
  "x11"
] }
